2013-01-10  Kaz Kylheku  <kaz@kylheku.com>

	* debug.c (help): Help text updated.
	(debug): Fix conflicting command assignment.
	Show form is now 'o'.

2012-10-31  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (int_str): Fix gaping bug introduced by previous commit,
	which could have been caught by running the regression test suite.
	The revised function was returning small integers as bignums.

2012-10-30  Kaz Kylheku  <kaz@kylheku.com>

	* lib.c (string_lt): Bugfix: wcscmp returns some value less than zero,
	not specifically -1.

2012-10-30  Kaz Kylheku  <kaz@kylheku.com>

	* mpi-patches/config-types: Include the header as "config.h"
	rather than "../config.h" because the dependency generation script
	checks for this as a special case and treats it relative to the
	build directory.

	* dep.mk: Regenerated.

2012-10-01  Kaz Kylheku  <kaz@kylheku.com>

	* arith.c (bignum_from_long): New function.

	* arith.h (bignum_from_long): Declared.

	* lib.c (int_str): Streamlined. Only use mp_read_radix in the case when
	wcstol fails, because now we have bignum_from_long to handle all values
	of long. Ensure that the bignum is normalized, in case it falls in the
	fixnum range (does not happen on our usual platforms). 

2012-09-25  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c: Allow the test form of a for loop to be omitted,
	defaulting to a true test, allowing an infinite loop to
	be expressed as (for () () () ...).

	* txr.1: Documented.

2012-09-24  Kaz Kylheku  <kaz@kylheku.com>

	* RELNOTES: Correct incorrect 2011 years on all 2012 dates. 
	How did that happen?

2012-09-24  Kaz Kylheku  <kaz@kylheku.com>

	* eval.c (apply): Fix in error message: hard coded "apply" instead
	of using ctx_form.

2012-09-24  Kaz Kylheku  <kaz@kylheku.com>

	Bugfix: internal funcall functions not handling functions
	with optional arguments.

	* lib.c (generic_funcall): New static function, based on apply
	from eval.c.
	(funcall, funcall1, funcall2, funcall3, funcall4): If the function